samples/_failures_safe/1761215815_e6442a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17c71252.c: In function ‘main’:
./samples/SAFE/__tmp_17c71252.c:143:5: error: expected identifier or ‘(’ at end of input
  143 |     uint32_t
      |     ^~~~~~~~
./samples/SAFE/__tmp_17c71252.c:143:5: error: expected declaration or statement at end of input
